feat: services info done

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,13 @@
   text-shadow: 3px 2px #000000;
 }
 
+.services-container h2 {
+  font-size: 3rem;
+  margin-top: 2rem;
+  text-align: center;
+  font-weight: bold;
+}
+
 button {
   background-color: #000000;
   border-radius: 5px;
@@ -23,6 +30,7 @@ button {
 }
 .btn-primary:hover {
   background-color: transparent;
+  color: #ff5200;
 }
 .btn-rounded {
   margin-top: 1rem;
@@ -108,6 +116,44 @@ li {
   font-size: 4rem;
   margin-top: 1rem;
   font-weight: bold;
+}
+
+.services-container {
+  text-align: center;
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
+.services-container .services-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 2rem;
+}
+.services-container .services-card-container .services-card {
+  width: 30%;
+  margin: 1%;
+  padding: 2rem;
+  border: 1px solid #ccc;
+  transition: 0.3s;
+}
+.services-container .services-card-container .services-card i {
+  color: #ff5200;
+  font-size: 4rem;
+  display: block;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+}
+.services-container .services-card-container .services-card h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+.services-container .services-card-container .services-card p {
+  color: #8b8e94;
+}
+.services-container .services-card-container .services-card:hover {
+  border: transparent;
+  box-shadow: 0 1px 10px #ccc;
 }
 
 /*# sourceMappingURL=styles.css.map */
