--- a/sass/_utilities.sass
+++ b/sass/_utilities.sass
@@ -25,6 +25,12 @@
 %title-text-shadow
 	text-shadow: 3px 2px $black
 
+%section-title
+	font-size: 3rem
+	margin-top: 2rem
+	text-align: center
+	font-weight: bold
+
 // buttons
 
 button
@@ -47,6 +53,7 @@ button
 
 		&:hover
 			background-color: transparent
+			color: $primary-color
 
 	&-rounded
 		margin-top: 1rem
