--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -3,5 +3,5 @@ $light-color: #fff
 $dark-color: #181920
 $text-color: #8b8e94
 $black: #000000
-$secundary-bg: #e5eaff
+$secondary-bg: #e5eaff
 $footer-br: #1d1d1d
