--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -102,4 +102,79 @@
 				border: transparent
 				box-shadow: 0 1px 10px #ccc
 
+.jobs-container
+	background-color: $secondary-bg
+	padding: 3rem
 
+	h2
+		@extend %section-title
+
+	.jobs-list
+		display: flex
+		padding: 2rem 0
+
+		&__first-job
+			width: 30%
+			height: 415px
+			margin: 0 2%
+			border-radius: 5px
+			background-image: url('./../assets/images/job1.jpg')
+			position: relative
+			cursor: pointer
+			transition: .5s
+			@extend %center-background
+			@extend %card-hover
+
+		.other-jobs-container
+			display: flex
+			flex-wrap: wrap
+			width: 68%
+
+			.job-card
+				width: 46%
+				height: 200px
+				position: relative
+				cursor: pointer
+				margin: 0 15px 15px 0
+				@extend %center-background
+				@extend %card-hover
+
+			#job2
+				background-image: url('./../assets/images/job2.jpg')
+				border-radius: 5px
+
+			#job3
+				background-image: url('./../assets/images/job3.jpg')
+				border-radius: 5px
+
+			#job4
+				background-image: url('./../assets/images/job4.jpg')
+				border-radius: 5px
+
+			#job5
+				background-image: url('./../assets/images/job5.jpg')
+				border-radius: 5px
+
+		.job-card-cover
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			padding-top: 1.75rem
+			background-color: rgba(0,0,0,.6)
+			border: 3px solid $primary-color
+
+		.job-card-title
+			text-align: center
+			color: #fff
+			font-size: 2.2rem
+			transition: .5s
+			font-weight: bold
+
+		.job-card-description
+			text-align: center
+			color: #fff
+			padding-top: 1rem
+			font-size: .9rem
+			padding: .5rem
