feat: footer done

--- a/sass/_utilities.sass
+++ b/sass/_utilities.sass
@@ -20,6 +20,12 @@
 	&:hover
 		color: $primary-color
 
+// mobile responsiviness
+
+@mixin mobile
+	@media (max-width: 425px)
+		@contet
+
 //placeholder selectors
 
 %title-text-shadow
