--- a/css/styles.css
+++ b/css/styles.css
@@ -239,4 +239,51 @@ li {
   padding: 0.5rem;
 }
 
+footer {
+  background-color: #1d1d1d;
+  color: #8b8e94;
+  padding: 5rem 2rem;
+}
+footer .footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+footer .footer-container .footer-title {
+  color: #fff;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+footer .footer-container__description, footer .footer-container__links {
+  width: 50%;
+}
+footer .footer-container__description p {
+  width: 80%;
+  line-height: 1.3;
+}
+footer .footer-container__links {
+  display: flex;
+}
+footer .footer-container__links--list {
+  padding: 0 1rem;
+}
+footer .footer-container__links--list li {
+  margin-bottom: 0.5rem;
+}
+footer .footer-container__links--list li a {
+  color: #8b8e94;
+  transition: 0.5s;
+}
+footer .footer-container__links--list li a:hover {
+  color: #fff;
+}
+footer .footer-container__copywriting {
+  width: 100%;
+  margin-top: 3rem;
+}
+footer .footer-container__copywriting p {
+  margin-bottom: 1rem;
+}
+
 /*# sourceMappingURL=styles.css.map */
