--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -178,3 +178,53 @@
 			padding-top: 1rem
 			font-size: .9rem
 			padding: .5rem
+
+footer
+	background-color: $footer-bg
+	color: $text-color
+	padding: 5rem 2rem
+
+	.footer-container
+		max-width: 1200px
+		margin: 0 auto
+		display: flex
+		flex-wrap: wrap
+
+		.footer-title
+			color: #fff
+			font-weight: bold
+			margin-bottom: 1rem
+
+	.footer-container__description, .footer-container__links
+		width: 50%
+
+	.footer-container__description
+		p
+			width: 80%
+			line-height: 1.3
+
+	.footer-container__links
+		display: flex
+
+		&--list
+			padding: 0 1rem
+
+			li
+				margin-bottom: .5rem
+
+				a
+					color: $text-color
+					transition: .5s
+
+					&:hover
+						color: #fff
+
+	.footer-container__copywriting
+		width: 100%
+		margin-top: 3rem
+
+		p
+			margin-bottom: 1rem
+
+
+
