--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 
 .jobs-container .jobs-list .other-jobs-container .job-card .job-card-title, .jobs-container .jobs-list__first-job .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-cover, .jobs-container .jobs-list__first-job .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-description, .jobs-container .jobs-list__first-job .job-card-description {
   opacity: 0;
+  opacity: 1;
 }
 .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-title, .jobs-container .jobs-list__first-job:hover .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-cover, .jobs-container .jobs-list__first-job:hover .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-description, .jobs-container .jobs-list__first-job:hover .job-card-description {
   opacity: 1;
@@ -73,6 +74,16 @@ li {
   background-size: cover;
   background-position: center;
 }
+@media (max-width: 425px) {
+  #main-banner {
+    height: 100vh;
+  }
+}
+@media (max-width: 425px) {
+  #main-banner nav {
+    display: none;
+  }
+}
 #main-banner .nav-container {
   display: flex;
   justify-content: space-between;
@@ -83,6 +94,12 @@ li {
   padding: 1.5rem 2rem;
   background-color: #000000;
   z-index: 2;
+}
+@media (max-width: 425px) {
+  #main-banner .nav-container {
+    padding: 1rem;
+    width: 100%;
+  }
 }
 #main-banner .nav-container .brand {
   color: #fff;
@@ -112,6 +129,11 @@ li {
   color: #fff;
   display: none;
 }
+@media (max-width: 425px) {
+  #main-banner .nav-container .fas.fa-bars {
+    display: block;
+  }
+}
 #main-banner .title-container {
   color: #fff;
   display: flex;
@@ -119,6 +141,12 @@ li {
   align-items: center;
   justify-content: center;
   height: 100%;
+}
+@media (max-width: 425px) {
+  #main-banner .title-container {
+    text-align: center;
+    padding: 2rem;
+  }
 }
 #main-banner .title-container h2 {
   font-size: 3rem;
@@ -141,12 +169,23 @@ li {
   justify-content: space-around;
   padding: 2rem;
 }
+@media (max-width: 425px) {
+  .services-container .services-card-container {
+    padding: 2rem 0;
+  }
+}
 .services-container .services-card-container .services-card {
   width: 30%;
   margin: 1%;
   padding: 2rem;
   border: 1px solid #ccc;
   transition: 0.3s;
+}
+@media (max-width: 425px) {
+  .services-container .services-card-container .services-card {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 .services-container .services-card-container .services-card i {
   color: #ff5200;
@@ -172,9 +211,19 @@ li {
   background-color: #e5eaff;
   padding: 3rem;
 }
+@media (max-width: 425px) {
+  .jobs-container {
+    padding: 2rem;
+  }
+}
 .jobs-container .jobs-list {
   display: flex;
   padding: 2rem 0;
+}
+@media (max-width: 425px) {
+  .jobs-container .jobs-list {
+    flex-direction: column;
+  }
 }
 .jobs-container .jobs-list__first-job {
   width: 30%;
@@ -186,10 +235,24 @@ li {
   cursor: pointer;
   transition: 0.5s;
 }
+@media (max-width: 425px) {
+  .jobs-container .jobs-list__first-job {
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    margin-bottom: 2rem;
+  }
+}
 .jobs-container .jobs-list .other-jobs-container {
   display: flex;
   flex-wrap: wrap;
   width: 68%;
+}
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .other-jobs-container {
+    width: 100%;
+    flex-direction: column;
+  }
 }
 .jobs-container .jobs-list .other-jobs-container .job-card {
   width: 46%;
@@ -197,6 +260,14 @@ li {
   position: relative;
   cursor: pointer;
   margin: 0 15px 15px 0;
+}
+@media (max-width: 425px) {
+  .jobs-container .jobs-list .other-jobs-container .job-card {
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    margin-bottom: 2rem;
+  }
 }
 .jobs-container .jobs-list .other-jobs-container #job2 {
   background-image: url("./../assets/images/job2.jpg");
@@ -250,6 +321,12 @@ footer .footer-container {
   display: flex;
   flex-wrap: wrap;
 }
+@media (max-width: 425px) {
+  footer .footer-container {
+    max-width: 100%;
+    flex-direction: column;
+  }
+}
 footer .footer-container .footer-title {
   color: #fff;
   font-weight: bold;
@@ -258,15 +335,37 @@ footer .footer-container .footer-title {
 footer .footer-container__description, footer .footer-container__links {
   width: 50%;
 }
+@media (max-width: 425px) {
+  footer .footer-container__description, footer .footer-container__links {
+    width: 100%;
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+}
 footer .footer-container__description p {
   width: 80%;
   line-height: 1.3;
 }
+@media (max-width: 425px) {
+  footer .footer-container__description p {
+    width: 100%;
+  }
+}
 footer .footer-container__links {
   display: flex;
 }
+@media (max-width: 425px) {
+  footer .footer-container__links {
+    flex-direction: column;
+  }
+}
 footer .footer-container__links--list {
   padding: 0 1rem;
+}
+@media (max-width: 425px) {
+  footer .footer-container__links--list {
+    margin-bottom: 2rem;
+  }
 }
 footer .footer-container__links--list li {
   margin-bottom: 0.5rem;
@@ -282,8 +381,23 @@ footer .footer-container__copywriting {
   width: 100%;
   margin-top: 3rem;
 }
+@media (max-width: 425px) {
+  footer .footer-container__copywriting {
+    text-align: center;
+  }
+}
 footer .footer-container__copywriting p {
   margin-bottom: 1rem;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: px;
+  background: #ff5200;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 /*# sourceMappingURL=styles.css.map */
