--- a/sass/_utilities.sass
+++ b/sass/_utilities.sass
@@ -22,9 +22,15 @@
 
 // mobile responsiviness
 
+@mixin card-mobile
+	width: 100%
+	height: 200px
+	margin: 0
+	margin-bottom: 2rem
+
 @mixin mobile
 	@media (max-width: 425px)
-		@contet
+		@content
 
 //placeholder selectors
 
@@ -44,6 +50,9 @@
 %card-hover
 	.job-card-title, .job-card-cover, .job-card-description
 		opacity: 0
+
+		@include mobile
+		opacity: 1
 
 	&:hover
 		.job-card-title, .job-card-cover, .job-card-description
