--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -10,6 +10,13 @@
 	background-size: cover
 	background-position: center
 
+	@include mobile
+		height: 100vh
+
+	nav
+		@include mobile
+			display: none
+
 	.nav-container
 		display: flex
 		justify-content: space-between
@@ -20,6 +27,10 @@
 		padding: 1.5rem 2rem
 		background-color: $black
 		z-index: 2
+
+		@include mobile
+			padding: 1rem
+			width: 100%
 
 		.brand
 			color: $light-color
@@ -43,6 +54,9 @@
 			color: #fff
 			display: none
 
+			@include mobile
+				display: block
+
 	.title-container
 		color: $light-color
 		display: flex
@@ -50,6 +64,10 @@
 		align-items: center
 		justify-content: center
 		height: 100%
+
+		@include mobile
+			text-align: center
+			padding: 2rem
 
 		h2
 			font-size: 3rem
@@ -76,12 +94,19 @@
 		justify-content: space-around
 		padding: 2rem
 
+		@include mobile
+			padding: 2rem 0
+
 		.services-card
 			width: 30%
 			margin: 1%
 			padding: 2rem
 			border: 1px solid #ccc
 			transition: .3s
+
+			@include mobile
+				width: 100%
+				margin-bottom: 2rem
 
 			i
 				color: $primary-color
@@ -106,12 +131,18 @@
 	background-color: $secondary-bg
 	padding: 3rem
 
+	@include mobile
+		padding: 2rem
+
 	h2
 		@extend %section-title
 
 	.jobs-list
 		display: flex
 		padding: 2rem 0
+
+		@include mobile
+			flex-direction: column
 
 		&__first-job
 			width: 30%
@@ -125,10 +156,17 @@
 			@extend %center-background
 			@extend %card-hover
 
+			@include mobile
+				@include card-mobile
+
 		.other-jobs-container
 			display: flex
 			flex-wrap: wrap
 			width: 68%
+
+			@include mobile
+				width: 100%
+				flex-direction: column
 
 			.job-card
 				width: 46%
@@ -138,6 +176,9 @@
 				margin: 0 15px 15px 0
 				@extend %center-background
 				@extend %card-hover
+
+				@include mobile
+					@include card-mobile
 
 			#job2
 				background-image: url('./../assets/images/job2.jpg')
@@ -190,6 +231,10 @@ footer
 		display: flex
 		flex-wrap: wrap
 
+		@include mobile
+			max-width: 100%
+			flex-direction: column
+
 		.footer-title
 			color: #fff
 			font-weight: bold
@@ -198,16 +243,30 @@ footer
 	.footer-container__description, .footer-container__links
 		width: 50%
 
+		@include mobile
+			width: 100%
+			margin-bottom: 2rem
+			text-align: center
+
 	.footer-container__description
 		p
 			width: 80%
 			line-height: 1.3
 
+			@include mobile
+				width: 100%
+
 	.footer-container__links
 		display: flex
 
+		@include mobile
+			flex-direction: column
+
 		&--list
 			padding: 0 1rem
+
+			@include mobile
+				margin-bottom: 2rem
 
 			li
 				margin-bottom: .5rem
@@ -223,8 +282,17 @@ footer
 		width: 100%
 		margin-top: 3rem
 
+		@include mobile
+			text-align: center
+
 		p
 			margin-bottom: 1rem
 
+//scrollbar style
+::-webkit-scrollbar
+	width: 5px
 
-
+::-webkit-scrollbar-thumb
+	-webkit-border-radius: px
+	background: $primary-color
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5)
